# elite

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
benchmarks/: equalities.eli  instantions.eli  invocations.eli  properties.eli  strings.eli
examples/: calculator.eli  complex.eli  triangle.eli
include/: common.h  compiler.h  tokenizer.h  vm.h
include/helpers/: debug.h  disassebler.h  error.h  generic.h  hash.h  stack.h
include/natives/: functions.h  handler.h  methods.h  prototypes.h
include/natives/methods/: number.h
include/natives/prototypes/: number.h  object.h  string.h
include/types/: object.h  stack.h  value.h
include/utilities/: chunk.h  generic.h  memory.h  native.h  table.h
include/utils/: chunk.h  memory.h  object.h  value.h
src/: compiler.c  main.c  tokenizer.c  vm.c
src/helpers/: debug.c  disassebler.c  error.c  generic.c  hash.c  stack.c
src/natives/: functions.c  handler.c  methods.c  prototypes.c
src/natives/methods/: number.c
src/natives/prototypes/: number.c  object.c  string.c
src/types/: object.c  stack.c  value.c
src/utilities/: chunk.c  generic.c  memory.c  native.c  table.c
src/utils/: chunk.c  memory.c  object.c  value.c
